kubernetes/infrastructure/monitoring/prometheus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    gateway.homelab/access: public
    gateway.homelab/lan: "true"
